# makevalid

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  Makefile.am  Makefile.in  README.md  clean.sh  cmake_install.cmake  configure  configure.ac  test.wkt
src/: config.c  config.h  main.c
